--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,8 @@ header{position: sticky;
     top: 0%;}
     .navbar-collapse{flex-grow: inherit;}  
     .navbar-dark .navbar-nav .nav-link{color:white;}
-    .navbar-dark .navbar-nav .nav-link:hover{color:blue; background-color: white;}
+    .navbar-dark .navbar-nav .nav-link:hover{color:blue; background-color: white;
+    ;}
     
     /*menu de hamburguesa*/
     .navbar-dark .navbar-toggler{color: blue ;
@@ -20,10 +21,7 @@ header{position: sticky;
     
     
             
-    /*BACKGROUNDS*/
-    /*Background header*/
-    .header{background-image: url(../images/nuevasimagenes/imgheader.jpg);
-    background-position: center;}
+
     
     /*Background main*/
     .gradiantes{background-image:linear-gradient(black, white);}
@@ -34,13 +32,8 @@ header{position: sticky;
     background-size: cover;}
     
     
-    /*BOXMODELING/ESTILO*/
-    /*Boxmodeling/tipografia header*/
-    .proximotorneo{margin-left: auto;
-        margin-right: auto;
-        text-align: center;
-        padding: 10px;}
-    #imglogonav{min-width:70px;
+    
+    .imglogonav{width: 70px;
     border-radius: 15px;
     border-color: black;
     margin-left: 10px;
@@ -53,68 +46,44 @@ header{position: sticky;
     /*Boxmodeling/tipografia main*/
     
     
-    .h1torneo{  font-family: 'Kanit', sans-serif;
+    .h1index{  font-family: 'Kanit', sans-serif;
         font-family: 'Permanent Marker', cursive;
         margin-left: auto;
         margin-right: auto;
         text-align: center;
         padding: 10px;
     color:rgb(2, 4, 81) ;
-    
     }
     
-    #fotoproximotorneo{
-        margin-top: auto;
+    /*sponsors*/
+    .h2index{font-family: 'Kanit', sans-serif;
+        font-family: 'Permanent Marker', cursive;
         margin-left: auto;
-        margin-right: auto;
-        width: 300px
-        ;
-        }
-    
-     /*proximascarreras*/   
-    .proximascarreras{margin-left: auto;
         margin-right: auto;
         text-align: center;
         padding: 10px;
-    }
-    .fotoproximacarrera{width: 300px;
-    height: 300px;}
-    
-    
-    /*sponsors*/
-    .sponsors{margin-left: auto;
-        margin-right: auto;
-        text-align: center;
-        padding: 10px;}
+    color:rgb(2, 4, 81)}
+
+    .sponsors{width: 100%;}
     
     
     
     /*Boxmodeling footer*/
+    .footermio{display: flex;
+    justify-content: space-between;
+color: white;
+text-transform: uppercase;}
     .logofooter{width: 50px;}
     
     
     
     /*MEDIAQUARY TABLET*/
     @media (min-width:769px) and (max-width:1199px){
-            /*Background header*/
-            .header{background-image: url(../images/nuevasimagenes/imgheader.jpg);
-                background-position: center;
-                background-size: cover;}
-                
-                /*Background main*/
-                .main{background-image: url(../images/nuevasimagenes/fondomain.jpg);
-                background-position: center;
-                background-size: cover;}
                 
                 /*Baground footer*/
                 .footer{background-image: url(../images/nuevasimagenes/imgfooterr.jpg);
                 background-position: center;
                 background-size: cover;}
-    .fotoproximacarrera{width: 700px;
-    height: 450px;} 
-    #fotoproximotorneo{width: 700px;
-        height: 450px}
-            
             }
     
     
@@ -131,29 +100,8 @@ header{position: sticky;
     @media (min-width:1200px){
     
     
-    /*GRID QUE ORGANIZA EL LAYOUT DEL MAIN*/
-    .main{display: grid;
-    grid-template-columns: repeat(3,auto);
-    grid-template-rows: repeat(4,auto);
-    gap: 10px;
-    grid-template-areas:
-    ". torneo ."
-    "carrera1.."
-    ". . carrera2"
-    ". sponsors ."
-    ;} 
-    
-    .proximotorneo{grid-area: torneo;}
-    .proximascarreras{grid-area: carreras;}
-    .sponsors{grid-area: sponsors;}
-    
     /*Flex/grid para organizar los elementos dentro de las celdas grid*/
-    .proximotorneo{display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-content: center;
-                    space-between;   
-    }
+    
     
     .proximascarreras{display: flex;
     flex-direction: row-reverse;
@@ -163,90 +111,7 @@ header{position: sticky;
     .sponsors{display: flex;
             align-items: center;
             justify-content: center;}
-    
-    /*BACKGROUNDS*/
-            /*Background header*/
-            .header{background-image: url(../images/nuevasimagenes/imgheader.jpg);
-            background-position: center;
-            background-size: cover;}
-            
-            /*Background main*/
-            .main{background-image: url(../images/nuevasimagenes/fondomain.jpg);
-            background-position: center;
-            background-size: cover;}
-            
-            /*Baground footer*/
-            .footer{background-image: url(../images/nuevasimagenes/imgfooterr.jpg);
-            background-position: center;
-            background-size: cover;}
-            
-            /*Background fotos .proximas carreras*/
-            .carreras12{background-color: antiquewhite;}
-            /*BOXMODELING/ESTILO*/
-            /*Boxmodeling/tipografia header*/
-            #imglogonav{min-width:120px;
-            border-radius: 15px;
-            border-color: black;
-            margin-left: 10px;
-            margin-right: 1%;}
-            
-            .divnav{font-family: Arial, Helvetica, sans-serif;
-            font-size: 20px;
-            text-decoration:none;
-            color: brown;
-            }
-            
-            /*Boxmodeling/tipografia main*/
-            
-            
-            .proximotorneo{margin-left: auto;
-                margin-right: auto;
-                text-align: center;
-                padding: 10px;}
-     /*animaciones*/
-            #h1proxtorneo{background-color: blue;
-    animation-name:cambiocolorh1;animation-duration: 2s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;}
-    @keyframes cambiocolorh1{
-        from {background-color: azure}
-        to {background-color: aquamarine}
-    
-    }
-    #fotoproximotorneo{
-                margin-top: auto;
-                width: auto
-                ;
-                }
-            
-    /*proximascarreras*/  
-        
-            .h2proxcarrera{font-family:;
-            font: size 200px;
-            margin: 0% 15% 0% 15%;
-                animation-name:cambiocolorh2;animation-duration: 2s;
-                animation-iteration-count: infinite;
-                animation-direction: alternate;}
-                @keyframes cambiocolorh2{
-                    from {background-color: rgb(5, 46, 248)}
-                    to {background-color: rgb(26, 181, 88)
-                    }
-        }
-            
-            
-            .fotoproximacarrera{width: 702px;height: 500px;;}
-            .fotoproximacarrera-carrera1img{padding-right: 10%;}
-            .fotoproximacarrera-carrera2img{padding: 10%;}
-            
-            /*sponsors*/
-            .sponsors{margin-left: auto;
-                margin-right: auto;
-                text-align: center;
-                padding: 10px;}
-        
-            
-            
-            /*Boxmodeling footer*/
+
             .logofooter{width: 100px;
             height: 60px;}
         }
