--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,4 @@
+
 /*MOBILE*/
 header{position: sticky;
     top: 0%;}
@@ -17,8 +18,6 @@ header{position: sticky;
     
     .navbar-collapse{flex-grow: inherit;}  
     /*Flex/grid para organizar los elementos dentro de las celdas grid*/
-    
-    
     
             
 
@@ -46,7 +45,8 @@ header{position: sticky;
     /*Boxmodeling/tipografia main*/
     
     
-    .h1index{  font-family: 'Kanit', sans-serif;
+    .h1index
+    {  font-family: 'Kanit', sans-serif;
         font-family: 'Permanent Marker', cursive;
         margin-left: auto;
         margin-right: auto;
@@ -56,7 +56,8 @@ header{position: sticky;
     }
     
     /*sponsors*/
-    .h2index{font-family: 'Kanit', sans-serif;
+    .h2index
+    {font-family: 'Kanit', sans-serif;
         font-family: 'Permanent Marker', cursive;
         margin-left: auto;
         margin-right: auto;
@@ -69,14 +70,22 @@ header{position: sticky;
     
     
     /*Boxmodeling footer*/
-    .footermio{display: flex;
+    .footermio
+    {display: flex;
     justify-content: space-between;
 color: white;
 text-transform: uppercase;}
     .logofooter{width: 50px;}
     
     
-    
+    .textogeneral
+    {background-color: rgba(2, 5, 81, 0.176);
+    font-size: 100%;
+    font-weight: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: rgba(173, 251, 251, 0.591);
+    }
+
     /*MEDIAQUARY TABLET*/
     @media (min-width:769px) and (max-width:1199px){
                 
