--- a/css/style.css
+++ b/css/style.css
@@ -1,107 +1,177 @@
-/*MOBILE*/
+body {
+  background-image: url(../images/nuevasimagenes/fondobody.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed; }
+
 header {
-  position: -webkit-sticky;
+  background-color: rgba(240, 234, 234, 0);
   position: sticky;
-  top: 0%;
-}
+  top: 0;
+  z-index: 1; }
+
+.imglogonav {
+  width: 100%;
+  border-radius: 15px;
+  border-color: black;
+  margin-left: 0%;
+  margin-right: 0%;
+  box-shadow: 4rem #e20000; }
 
 .navbar-collapse {
-  flex-grow: inherit;
-}
+  flex-grow: inherit; }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: white;
-}
+  color: white; }
 
 .navbar-dark .navbar-nav .nav-link:hover {
   color: blue;
-  background-color: white;
-}
+  background-color: white; }
 
 /*menu de hamburguesa*/
 .navbar-dark .navbar-toggler {
   color: blue;
-  border-color: blue;
-}
+  border-color: blue; }
+
+.navbarbackground {
+  background-color: rgba(128, 128, 128, 0.603); }
+
+.footermio {
+  background-image: url(../images/nuevasimagenes/imgfooterr.jpg);
+  background-position: center;
+  background-size: cover;
+  margin-bottom: 0%; }
+
+.divinscripciones {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+  .divinscripciones .h2inscripciones {
+    color: #01f210;
+    width: 100%;
+    font-family: 'Kanit', sans-serif;
+    font-family: 'Permanent Marker', cursive;
+    text-align: center;
+    font-size: xx-large; }
+  .divinscripciones .imginscripciones {
+    width: 100%; }
+  .divinscripciones .textosec_inscripciones {
+    text-align: center;
+    color: #01f210;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial;
+    font-size: 1.3rem; }
+
+.divinscripciones2 {
+  padding-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+  .divinscripciones2 .imginscripciones2 {
+    width: 80%;
+    object-fit: cover; }
+  .divinscripciones2 .textosec_inscripciones2 {
+    background-color: rgba(128, 128, 128, 0.603);
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Rubik Dirt', cursive;
+    color: orange; }
+
+.divinscripciones3 .imginscripciones3 {
+  width: 100%; }
+
+.divinscripciones3 .textosec_inscripciones3 {
+  background-color: white;
+  text-align: center; }
+
+@media (min-width: 576px) and (max-width: 991px) {
+  .textosec_inscripciones3 {
+    font-size: 150%;
+    color: #02d302;
+    text-transform: uppercase;
+    font-weight: 900; } }
+
+.h1nosotros {
+  font-family: 'Kanit', sans-serif;
+  font-family: 'Permanent Marker', cursive;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding: 10px;
+  color: #020451;
+  background-color: rgba(128, 128, 128, 0.603); }
+
+.textonosotros {
+  background-color: rgba(2, 5, 81, 0.176);
+  font-size: 100%;
+  font-weight: bold;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: rgba(173, 251, 251, 0.591); }
+
+.divnosotros {
+  background-image: url(/images/nuevasimagenes/fotoefectos.com_.jpg);
+  background-position: center;
+  background-size: cover; }
+
+.galeriaimg {
+  margin: 2%; }
+
+@media (min-width: 992px) {
+  .gridgaleria {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: auto;
+    gap: 5px; }
+  .galeriaimg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin-right: 10px; } }
 
 /*GRID QUE ORGANIZA EL LAYOUT DEL MAIN*/
 .main {
   display: flex;
   flex-direction: column;
   align-content: center;
-  justify-content: center;
-}
-
-.navbar-collapse {
-  flex-grow: inherit;
-}
+  justify-content: center; }
 
 /*Flex/grid para organizar los elementos dentro de las celdas grid*/
 /*Background main*/
-.gradiantes {
-  background-image: linear-gradient(black, white);
-}
-
 /*Baground footer*/
-.footermio {
-  background-image: url(../images/nuevasimagenes/imgfooterr.jpg);
-  background-position: center;
-  background-size: cover;
-}
-
-.imglogonav {
-  width: 70px;
-  border-radius: 15px;
-  border-color: black;
-  margin-left: 10px;
-  margin-right: 1%;
-}
-
 /*Boxmodeling/tipografia main*/
 .h1index {
-  font-family: "Kanit", sans-serif;
-  font-family: "Permanent Marker", cursive;
+  font-family: 'Kanit', sans-serif;
+  font-family: 'Permanent Marker', cursive;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
   padding: 10px;
-  color: rgb(2, 4, 81);
-}
+  color: #020451; }
 
 /*sponsors*/
 .h2index {
-  font-family: "Kanit", sans-serif;
-  font-family: "Permanent Marker", cursive;
+  font-family: 'Kanit', sans-serif;
+  font-family: 'Permanent Marker', cursive;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  padding: 10px;
-  color: rgb(2, 4, 81);
-}
+  padding: 10px; }
 
 .sponsors {
-  width: 100%;
-}
+  width: 100%; }
 
 /*Boxmodeling footer*/
 .footermio {
   display: flex;
   justify-content: space-between;
   color: white;
-  text-transform: uppercase;
-}
+  text-transform: uppercase; }
 
 .logofooter {
-  width: 50px;
-}
-
-.textogeneral {
-  background-color: rgba(2, 5, 81, 0.176);
-  font-size: 100%;
-  font-weight: bold;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  color: rgba(173, 251, 251, 0.591);
-}
+  width: 50px; }
 
 /*MEDIAQUARY TABLET*/
 @media (min-width: 769px) and (max-width: 1199px) {
@@ -109,9 +179,8 @@ header {
   .footer {
     background-image: url(../images/nuevasimagenes/imgfooterr.jpg);
     background-position: center;
-    background-size: cover;
-  }
-}
+    background-size: cover; } }
+
 /*MEDIAQUARY PC*/
 @media (min-width: 1200px) {
   /*Flex/grid para organizar los elementos dentro de las celdas grid*/
@@ -119,19 +188,16 @@ header {
     display: flex;
     flex-direction: row-reverse;
     align-content: center;
-    justify-content: space-around;
-  }
+    justify-content: space-around; }
   .sponsors {
     display: flex;
     align-items: center;
-    justify-content: center;
-  }
+    justify-content: center; }
   .logofooter {
     width: 100px;
-    height: 60px;
-  }
-}
+    height: 60px; } }
+
 /*imagen de fondo del header*/
 /*texto del nav*/
 /*logo del nav*/
-/*MAIN*//*# sourceMappingURL=style.css.map */
+/*MAIN*/
