--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,42 +1,34 @@
+@import"reset/reset";
+@import"utilities/variables" ;
+@import"components/header";
+@import"components/footer" ;
+@import"components/inscripciones/inscripciones"; 
+@import"components/inscripciones/mediaqueriesinscripciones";
+@import"components/nosotros/nosotros";
+@import"components/merch/merch";
+@import"components/merch/mediaqueriesmerch";
 
-/*MOBILE*/
-header{position: sticky;
-    top: 0%;}
-    .navbar-collapse{flex-grow: inherit;}  
-    .navbar-dark .navbar-nav .nav-link{color:white;}
-    .navbar-dark .navbar-nav .nav-link:hover{color:blue; background-color: white;
-    ;}
-    
-    /*menu de hamburguesa*/
-    .navbar-dark .navbar-toggler{color: blue ;
-    border-color:blue;}
     /*GRID QUE ORGANIZA EL LAYOUT DEL MAIN*/
     .main{display: flex;
     flex-direction: column;
     align-content: center;
     justify-content: center;}
     
-    .navbar-collapse{flex-grow: inherit;}  
+
     /*Flex/grid para organizar los elementos dentro de las celdas grid*/
     
             
 
     
     /*Background main*/
-    .gradiantes{background-image:linear-gradient(black, white);}
+
     
     /*Baground footer*/
-    .footermio{background-image: url(../images/nuevasimagenes/imgfooterr.jpg);
-    background-position: center;
-    background-size: cover;}
+ 
     
     
     
-    .imglogonav{width: 70px;
-    border-radius: 15px;
-    border-color: black;
-    margin-left: 10px;
-    margin-right: 1%;}
+   
     
     
     
@@ -63,7 +55,7 @@ header{position: sticky;
         margin-right: auto;
         text-align: center;
         padding: 10px;
-    color:rgb(2, 4, 81)}
+    }
 
     .sponsors{width: 100%;}
     
@@ -78,13 +70,7 @@ text-transform: uppercase;}
     .logofooter{width: 50px;}
     
     
-    .textogeneral
-    {background-color: rgba(2, 5, 81, 0.176);
-    font-size: 100%;
-    font-weight: bold;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: rgba(173, 251, 251, 0.591);
-    }
+    
 
     /*MEDIAQUARY TABLET*/
     @media (min-width:769px) and (max-width:1199px){
